Fix overflow mobile

--- a/src/components/domain/devcon-week/schedule.module.scss
+++ b/src/components/domain/devcon-week/schedule.module.scss
@@ -438,6 +438,7 @@
   // box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 
   &.is-devcon {
+    position: relative;
     overflow: hidden;
 
     &:before {
